--- a/_config.yml
+++ b/_config.yml
@@ -3,59 +3,54 @@
 # # # # # # # #
 
 # Basic
-name:               "CORAL Lab"
-title:              "CORAL Lab at ASU"
-description:        "The CORAL Lab is an natural language processing research group at Arizona State University."
-
+name: "CORAL Lab"
+title: "CORAL Lab at ASU"
+description: "The CORAL Lab is an natural language processing research group at Arizona State University."
 
 # URL
-url:                ""https://username.github.io"
-baseurl:            "/asu-coral"
+url: ""
+baseurl: ""
 #baseurl:            "" #For Root Domain
-permalink:          /:year/:month/:day/:title.html
+permalink: /:year/:month/:day/:title.html
 
 # Markdown
-markdown:           kramdown
+markdown: kramdown
 
 # Highlighter
-highlighter:        rouge
+highlighter: rouge
 
 # Navigation
 nav:
-  - name:           "home"
-    href:           "/"
+  - name: "home"
+    href: "/"
   # - name:           "about"
   #   href:           "/about"
-  - name:           "publications"
-    href:           "/publication"
-  - name:           "people"
-    href:           "/people"
+  - name: "publications"
+    href: "/publication"
+  - name: "people"
+    href: "/people"
 
 # Sass
 sass:
-  style:            :compressed
+  style: :compressed
 
 # Scopes
 defaults:
-  -
-    scope:
-      path:         ""
-      type:         "pages"
+  - scope:
+      path: ""
+      type: "pages"
     values:
-      layout:       "page"
-  -
-    scope:
-      path:         ""
-      type:         "posts"
+      layout: "page"
+  - scope:
+      path: ""
+      type: "posts"
     values:
-      layout:       "post"
-  -
-    scope:
-      path:         ""
-      type:         "people"
+      layout: "post"
+  - scope:
+      path: ""
+      type: "people"
     values:
-      layout:       "profile"
-
+      layout: "profile"
 
 collections:
   people:
